Screen shots and packages.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/BrettMStory/meeting-grey">View on GitHub</a>
 
-          <h1 id="project_title">Meeting-grey</h1>
+          <h1 id="project_title">Meeting Grey</h1>
           <h2 id="project_tagline">An entry into Bacon Game Jam 09. Theme was &quot;Depth.&quot;</h2>
 
             <section id="downloads">
@@ -33,13 +33,31 @@
       <section id="main_content" class="inner">
         <h3>
 <a id="packages" class="anchor" href="#packages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Packages</h3>
+<ul>
+  <li><a href="packages/Windows 32-bit.zip">Windows 32-bit</a></li>
+  <li><a href="packages/Windows 64-bit.zip">Windows 64-bit</a></li>
+  <li><a href="packages/Linux 32-bit.zip">Linux 32-bit</a></li>
+  <li><a href="packages/Linux 64-bit.zip">Linux 64-bit</a></li>
+  <li><a href="packages/Linux Universal.zip">Linux Universal</a></li>
+  <li><a href="packages/Mac 32-bit.zip">Mac 32-bit</a></li>
+  <li><a href="packages/Mac 64-bit.zip">Mac 64-bit</a></li>
+  <li><a href="packages/Mac Universal.zip">Mac Universal</a></li>
+</ul>
 
-<p>No packages are currently available.</p>
-
-<h3>
-<a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h3>
+<h3><a id="description" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Description</h3>
 
 <p>This project was made in 48 hours for Bacon Game Jam 09. Meeting Grey is a simplistic 2D platformer that allows swapping between two different depths to progress in the level. More information about Bacon Game Jam 09 can be found <a href="https://bacongamejam.org/jams/bacongamejam-09/">here</a>.</p>
+  
+<h3><a id="screenshots" class="anchor" href="#description" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h3>
+  
+<img src="images/screenshots/00.png" />
+<img src="images/screenshots/01.png" />
+<img src="images/screenshots/02.png" />
+<img src="images/screenshots/03.png" />
+<img src="images/screenshots/04.png" />
+<img src="images/screenshots/05.png" />
+<img src="images/screenshots/06.png" />
+<img src="images/screenshots/07.png" />
       </section>
     </div>
 
