--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <h3>
 <a id="packages" class="anchor" href="#packages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Packages</h3>
 <ul>
+  <li><a href="webplayer/webplayer.html">Webplayer</a></li>
   <li><a href="packages/Windows 32-bit.zip">Windows 32-bit</a></li>
   <li><a href="packages/Windows 64-bit.zip">Windows 64-bit</a></li>
   <li><a href="packages/Linux 32-bit.zip">Linux 32-bit</a></li>
